[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"
image = "0.24.7"
num = "0.4.1"
colorgrad = "0.6.2"
rayon = "1.8.0"
paste = "0.1.2"